--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PANDA"
 uuid = "57a71ab2-c1ee-420a-94e0-f42fd769768c"
-authors = ["Helene Morlon", "Ignacio Quintero", "Odile Maliet"]
-version = "0.1.0"
+authors = ["Hélène Morlon", "Ignacio Quintero", "Odile Maliet"]
+version = "0.1.1"
 
 [deps]
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
