--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ julia = "≥ 1.1.0"
 Optim = "≥ 0.18.0"
 ProgressMeter = "≥ 0.9.0"
 RCall = "≥ 0.13.2"
-DifferentialEquations = "≥ v6.0.0"
+DifferentialEquations = "≥ 6.0.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
