--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 
 [compat]
 DifferentialEquations = "6"
