--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ jobs:
   include:
     - stage: Documentation
       julia: 1.0
-      script: julia --project=docs -e '
-          using Pkg;
-          Pkg.develop(PackageSpec(path=pwd()));
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
+                                    Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs/ docs/make.jljulia --project=docs -e '
           Pkg.instantiate();
-          include("docs/make.jl");'
       after_success: skip
