back to 1.4 and linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ jobs:
   fast_finish: true
   include:
     - stage: "Documentation"
-      julia: 1.2
-      os: osx
+      julia: 1.4
+      os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
