--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ Distributions = "0.22, 0.23, 0.24, 0.25"
 Optim = "0.20, 0.21, 0.22, 1.0, 1.1, 1.2"
 ProgressMeter = "0.9, 1"
 RCall = "0.13"
-StringDistances = "0.6, 0.7, 0.8, 0.9, 0.10"
+StringDistances = "0.6, 0.7, 0.8, 0.9, 0.10, 0.11"
 julia = "1"
 
 [extras]
