--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 
 [compat]
-DifferentialEquations = "6"
+DifferentialEquations = "6, 7"
 Distributions = "0.22, 0.23, 0.24, 0.25"
 Optim = "0.20, 0.21, 0.22, 1.0, 1.1, 1.2"
 ProgressMeter = "0.9, 1"
