--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Hélène Morlon", "Ignacio Quintero", "Odile Maliet"]
 version = "0.0.7"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
